--- a/server/src/back-office/tabs/company-info.html
+++ b/server/src/back-office/tabs/company-info.html
@@ -87,7 +87,7 @@
         flag == 1
           ? $("#companyList").html(tmp)
           : $("#companyList").html(
-              "No prenotations founded with these filters"
+              "No prenotations found with these filters"
             );
         $("#totCompanies").html("TOTAL RESULTS: " + totCompanies);
         totCompanies = 0;
