--- a/server/src/back-office/tabs/prenotation-list.html
+++ b/server/src/back-office/tabs/prenotation-list.html
@@ -83,7 +83,7 @@
         }
         tmp !== ""
           ? $("#ptsList").html(tmp)
-          : $("#ptsList").html("No prenotations founded with these filters");
+          : $("#ptsList").html("No prenotations found with these filters");
         $("#totPrenotations").html("TOTAL RESULTS: " + totPrenotations);
         totPrenotations = 0;
       });
