--- a/client/back-office/tabs/sidebar.html
+++ b/client/back-office/tabs/sidebar.html
@@ -16,6 +16,9 @@
     const home = () => {
       window.location.href = "home.html";
     };
+    const profile = () => {
+      window.location.href = "profile.html"
+    }
   </script>
 </head>
 <div class="bg-transparent relative rounded-lg">
