--- a/server/src/index.html
+++ b/server/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CasAnimale</title>
     <script>
-      window.location.href = "http://localhost:5000/f";
+      window.location.href = "http://site212247.tw.cs.unibo.it/f";
     </script>
   </head>
 
