--- a/client/back-office/tabs/sidebar.html
+++ b/client/back-office/tabs/sidebar.html
@@ -10,7 +10,7 @@
 
     const logout = () => {
       document.cookie =
-        "tokenback=;path=/;domain=site212247.tw.cs.unibo.it;expires=Thu, 01 Jan 1970 00:00:01 GMT";
+        "tokenback=;path=/;;expires=Thu, 01 Jan 1970 00:00:01 GMT";
       window.location.href = "http://site212247.tw.cs.unibo.it/b/views/login.html";
     };
     const home = () => {
