fixed sidebar BO and other

--- a/client/back-office/tabs/sidebar.html
+++ b/client/back-office/tabs/sidebar.html
@@ -22,16 +22,6 @@
     const profile = () => {
       window.location.href = "profile.html";
     };
-//
-    //var userBar;
-    //const setUserBar = async () => {
-    //  userBar = await isUserLogged();
-    //  if (userBar === undefined)
-    //    window.location.href = "http://localhost:5000/b/views/login.html";
-    //  if (user.admin) {
-    //    $(".forAdmin").removeClass("hidden");
-    //  }
-    //};
   </script>
 </head>
 <div class="bg-transparent relative rounded-lg">
@@ -136,7 +126,7 @@
     <hr />
 
     <button
-      class="flex h-16 w-16 flex-col items-center justify-center gap-1 text-[#59114D] dark:text-gray-400"
+      class="flex h-16 w-16 flex-col items-center justify-center gap-1 text-[#59114D]"
       onclick="home()"
     >
       <!-- HeroIcon - Home Modern -->
