--- a/client/back-office/tabs/ecommerce-info.html
+++ b/client/back-office/tabs/ecommerce-info.html
@@ -3,7 +3,7 @@
     let products = [];
     let filteredProducts = [];
     let totProducts = 0;
-
+    setUser();
     const getProducts = async () => {
       var ret = await fetch("http://localhost:5000/api/product", {
         method: "GET",
