--- a/client/back-office/tabs/ecommerce-info.html
+++ b/client/back-office/tabs/ecommerce-info.html
@@ -128,7 +128,7 @@
   </script>
 </head>
 <body>
-  <div class="flex flex-col flex-1">
+  <main class="flex flex-col flex-1">
     <div id="productsFilters" class="flex flex-col">
       <!-- primo filtro-->
       <div class="flex flex-col sm:flex-row">
@@ -219,5 +219,5 @@
       class="flex flex-col flex primary font-semibold mt-4 my-2"
     ></div>
     <div id="productList" class="flex flex-col flex-1"></div>
-  </div>
+  </main>
 </body>
