--- a/client/back-office/tabs/ecommerce-info.html
+++ b/client/back-office/tabs/ecommerce-info.html
@@ -4,7 +4,7 @@
     let filteredProducts = [];
     let totProducts = 0;
     const getProducts = async () => {
-      var ret = await fetch("http://site212247.tw.cs.unibo.it/api/product", {
+      var ret = await fetch("http://localhost:5000/api/product", {
         method: "GET",
         credentials: "include",
       });
@@ -13,7 +13,7 @@
     };
 
     const deletePr = async (id) => {
-      var ret = await fetch("http://site212247.tw.cs.unibo.it/api/product/" + id, {
+      var ret = await fetch("http://localhost:5000/api/product/" + id, {
         method: "DELETE",
         credentials: "include",
       });
